# binius-zk-binius64

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  prek.toml  rust-toolchain.toml
crates/circuits/: Cargo.toml
crates/circuits/src/: concat.rs  lib.rs  popcount.rs  shift.rs
crates/circuits/src/bignum/: big_uint_divide.rs  big_uint_mod_pow.rs  mod.rs  mod_divide.rs  mod_inverse.rs  prime_field.rs  tests.rs
crates/circuits/src/bitcoin/: p2pkh_signature.rs
crates/circuits/src/blake2b/: circuit.rs  reference.rs
crates/circuits/src/blake3/: compress.rs  mod.rs
crates/circuits/src/ecdsa/: bitcoin.rs  ecrecover.rs  scalar_mul.rs
crates/circuits/src/float64/: add.rs  mul.rs  utils.rs
crates/circuits/src/hash_based_sig/: chain_verification.rs  codeword.rs
crates/circuits/src/keccak/: fixed_length.rs  mod.rs  permutation.rs
crates/circuits/src/secp256k1/: curve.rs  endosplit.rs  mod.rs
crates/circuits/src/sha256/: compress.rs  mod.rs
crates/circuits/src/sha512/: compress.rs  mod.rs
crates/circuits/src/skein512/: mod.rs
crates/circuits/tests/: gate_fusion_keccak.rs
crates/examples/: Cargo.toml
crates/examples/benches/: blake2b.rs  blake2s.rs  blake3_compressions.rs  keccak.rs  keccak_permutations.rs  sha256.rs  sha256_compressions.rs  sha512.rs
crates/examples/benches/utils/: config.rs  independent_hashes.rs  reporting.rs  runner.rs
crates/examples/examples/: blake3.rs  blake3_compress.rs
crates/examples/examples/tutorials/: basics_nondeterministic.rs  basics_word_semantics.rs  circuits_control_flow.rs
crates/examples/snapshots/: bitcoin_headers.snap  bitcoin_p2pkh.snap  blake2b.snap  blake2s.snap  blake3.snap  blake3_compress.snap  ec_msm.snap  ethsign.snap  hashsign.snap  keccak.snap  sha256.snap  sha512.snap  zklogin.snap
crates/examples/src/circuits/: blake2b.rs  blake2s.rs  blake3.rs  blake3_compress.rs  ec_msm.rs  ethsign.rs  independent_hashes.rs  keccak.rs  mod.rs  sha256.rs  sha512.rs  utils.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  ops.rs  util.rs
crates/frontend/src/compiler/: circuit.rs  const_prop.rs  constraint_builder.rs  dce.rs  gate_graph.rs  mod.rs  tests.rs  value_vec_alloc.rs
crates/frontend/src/compiler/eval_form/: batch_interpreter.rs  builder.rs  const_eval.rs  exec.rs  interpreter.rs  mod.rs
crates/frontend/src/compiler/gate/: assert_eq_cond.rs  bxor.rs  bxor_multi.rs  iadd.rs  mod.rs  (+5 more)
crates/hash/: Cargo.toml
crates/hash/benches/: sha256.rs
crates/hash/src/: binary_merkle_tree.rs  blake3.rs  blake3_portable.rs  compress.rs  lib.rs  parallel_compression.rs  parallel_digest.rs  sha256.rs  sha256_x4.rs
crates/iop/: Cargo.toml
crates/iop-prover/: Cargo.toml
crates/iop-prover/benches/: binary_merkle_tree.rs
crates/iop-prover/src/: basefold.rs  basefold_channel.rs  basefold_compiler.rs  basefold_zk_channel.rs  channel.rs  lib.rs  logup_star.rs  naive_channel.rs
crates/iop-prover/src/basefold/: channel.rs  opening.rs
crates/iop-prover/src/fri/: commit.rs  encode.rs  fold.rs  mod.rs  query.rs  tests.rs
crates/iop-prover/src/merkle_tree/: mod.rs  prover.rs  tests.rs
crates/iop/src/: basefold.rs  basefold_channel.rs  basefold_compiler.rs  basefold_zk_channel.rs  channel.rs  lib.rs  naive_channel.rs  size_tracking_channel.rs
crates/iop/src/fri/: batch.rs  common.rs  error.rs  fold.rs  mod.rs  size_estimation.rs  verify.rs
crates/iop/src/merkle_tree/: merkle_tree_vcs.rs  scheme.rs
crates/ip/: Cargo.toml
crates/ip-prover/: Cargo.toml
crates/ip-prover/benches/: bivariate_product.rs
crates/ip-prover/src/: channel.rs  fracaddcheck.rs  prodcheck.rs
crates/ip-prover/src/logup_star/: final_layer.rs  prove.rs  witness.rs
crates/ip-prover/src/sumcheck/: batch.rs  batch_quadratic_mle.rs  bivariate_product_evaluator.rs  bivariate_product_mle.rs  bivariate_product_multi_mle.rs  frac_add_mle.rs  mle_store.rs  mle_to_sumcheck.rs  mod.rs  multilinear_eval.rs  padded.rs  quadratic_mle.rs  quadratic_mle_evaluator.rs  rerand_mle.rs  round_evaluator.rs  selector_mle.rs  zk_mlecheck.rs
crates/ip/src/: channel.rs  fracaddcheck.rs  lib.rs  mlecheck.rs  prodcheck.rs
crates/ip/src/sumcheck/: batch.rs  common.rs  error.rs  verify.rs
crates/m4/: Cargo.toml
crates/m4-prover/: Cargo.toml
crates/m4-prover/benches/: assemble_operation_witness.rs  blake3_compressions.rs  keccak_protocol.rs  keccak_witness_gen.rs
crates/m4-prover/benches/utils/: m4_bench.rs
crates/m4-prover/src/: bitand.rs  lib.rs  operand_witness.rs  prove.rs  reduction.rs  shift.rs  value_table2.rs
crates/m4-prover/tests/: prove_hash_primitives.rs
crates/m4/src/: commit.rs  lib.rs  value_table.rs
crates/math/: Cargo.toml
crates/math/benches/: ntt.rs
crates/math/src/: batch_invert.rs  field_buffer.rs  inner_product.rs  lib.rs  line.rs  tensor_algebra.rs  univariate.rs
crates/math/src/multilinear/: eq.rs  evaluate.rs  fold.rs  hypercube.rs
crates/math/src/ntt/: domain_context.rs  neighbors_last.rs
crates/prover/: Cargo.toml
crates/prover/benches/: and_reduction.rs  batch_quadratic_mle.rs  binmul.rs  fold_words.rs  fracaddcheck.rs  intmul.rs  prodcheck.rs  shift_reduction.rs  sumcheck.rs
crates/prover/src/: fold_word.rs  prove.rs  ring_switch.rs  zk_config.rs
crates/prover/src/and_reduction/: fold_lookup.rs  mod.rs  ntt_lookup.rs  prover.rs  prover_setup.rs  sumcheck_round_messages.rs
crates/prover/src/hash/: parallel_digest.rs
crates/prover/src/protocols/: binmul.rs  inout_check.rs  mod.rs
crates/prover/tests/: prove_verify.rs  shift.rs
crates/spartan-prover/: Cargo.toml
crates/spartan-prover/src/: lib.rs  wiring.rs
crates/spartan-prover/src/wrapper/: mod.rs  replay_channel.rs  zk_wrapped_prover_channel.rs
crates/spartan-prover/tests/: integration_test.rs  wrapper_integration_test.rs
crates/spartan-verifier/: Cargo.toml
crates/spartan-verifier/src/: constraint_system.rs  lib.rs  wiring.rs
crates/spartan-verifier/src/wrapper/: builder_channel.rs  channel.rs  circuit_elem.rs  gadgets.rs  mod.rs  zk_wrapped_channel.rs
crates/spartan-verifier/tests/: proof_size_test.rs
(+166 files in other folders)
