[workspace]
members = ["crates/*", "crates/frontend/ceck"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Irreducible Team"]

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
debug = true

[profile.profiling]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"
debug = true

[workspace.dependencies]
anyhow = "1.0.98"
array-util = "1.0.2"
assert_matches = "1.5.0"
auto_impl = "1.3.0"
base64 = "0.22.1"
blake2 = "0.10.6"
blake3 = "1"
bitcoin = "0.32.7"
bitcoin_hashes = "0.14.0"
bytemuck = { version = "1.18.0", features = [
    "derive",
    "min_const_generics",
    "must_cast",
] }
bytes = "1.7.2"
cfg-if = "1.0.0"
clap = { version = "4.5", features = ["derive"] }
cranelift-entity = "0.121.1"
criterion = { version = "0.7.0", default-features = false }
derive_more = "0.99.17"
digest = "0.10.7"
# Pin to generic-array version before traits were marked deprecated. This is not
# ideal, but necessary until the digest crate releases a new version with the
# upgraded dependency.
generic-array = "=0.14.7"
getrandom = "0.3.3"
getset = "0.1.6"
hex = "0.4"
hex-literal = "1.0.0"
either = "1.11.0"
itertools = "0.14.0"
jwt-simple = { version = "0.12.12", default-features = false, features = ["pure-rust"] }
k256 = "0.13.4"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
paste = "1.0.15"
pest = "2.8.1"
pest_derive = "2.8.1"
proptest = { version = "1.2.0", default-features = false, features = ["std"] }
rand = { version = "0.9.1", default-features = false, features = [
    "std",
    "std_rng",
] }
rayon = "1.10.0"
regex = "1.10"
ripemd = "0.1.3"
rsa = { version = "0.9.8", features = ["sha2"] }
rstest = "0.26.1"
seq-macro = "0.3.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sha3 = "0.10.8"
hmac = "0.12.1"
insta = "1.43.1"
petgraph = "0.8.2"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
thiserror = "2.0.3"
transpose = "0.2.2"
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-profile = "0.10.11"
trait-set = "0.3.0"
uninit = "0.6.2"
z3 = "0.13.3"
ureq = "3.1"

[workspace.lints.clippy]
needless_range_loop = "allow"

[workspace.metadata.typos]
default.extend-words = { "typ" = "typ", "Toom" = "Toom", "inouts" = "inouts", "ceck" = "ceck" }
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
    "ands\\.mdx"
]
