[package]
name = "binius-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-core = { path = "../core" }
binius-utils = { path = "../utils" }
cranelift-entity = { workspace = true }
hex-literal.workspace = true
num-bigint = { workspace = true }
rand.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
rand = { workspace = true, features = ["thread_rng"] }
hex-literal = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
