# Copyright 2026 The Binius Developers

[package]
name = "binius-hash"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
bytemuck.workspace = true
bytes.workspace = true
digest.workspace = true
itertools.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["thread_rng"] }

[features]
default = []
rayon = ["binius-utils/rayon"]

[[bench]]
name = "sha256"
harness = false
