[package]
name = "binius-iop"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-hash = { path = "../hash" }
binius-ip = { path = "../ip" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
bytes.workspace = true
digest.workspace = true
getset.workspace = true
itertools.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
binius-math = { path = "../math", features = ["test-utils"] }
rand.workspace = true
sha2.workspace = true
