[package]
name = "binius-ip-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-field = { path = "../field" }
binius-ip = { path = "../ip" }
binius-math = { path = "../math" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
either.workspace = true
itertools.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
binius-math = { path = "../math", features = ["test-utils"] }
proptest.workspace = true
rand = { workspace = true, features = ["thread_rng"] }
sha2.workspace = true

[features]
default = []
rayon = ["binius-utils/rayon"]
