[package]
name = "binius-m4-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
binius-core = { path = "../core" }
binius-field = { path = "../field" }
binius-frontend = { path = "../frontend" }
binius-hash = { path = "../hash" }
binius-iop-prover = { path = "../iop-prover" }
binius-ip = { path = "../ip" }
binius-ip-prover = { path = "../ip-prover" }
binius-m4-verifier = { path = "../m4-verifier" }
binius-math = { path = "../math" }
binius-prover = { path = "../prover" }
binius-transcript = { path = "../transcript" }
binius-utils = { path = "../utils" }
binius-verifier = { path = "../verifier" }

[dev-dependencies]
assert_matches = { workspace = true }
binius-circuits = { path = "../circuits" }
binius-iop = { path = "../iop" }
binius-math = { path = "../math", features = ["test-utils"] }
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = []
rayon = ["binius-utils/rayon"]

[[bench]]
name = "keccak_witness_gen"
harness = false

[[bench]]
name = "blake3_compressions"
harness = false
